prometheus/kube-dns-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-sidecar-kube-dns
  labels:
    app: metrics-sidecar-kube-dns
  namespace: kube-system
  annotations:
    prometheus.io/port: "10054"
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: http-metrics-sidecar
    port: 10054
    protocol: TCP
    targetPort: 10054
  selector:
    k8s-app: kube-dns
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-kube-dns
  labels:
    app: metrics-kube-dns
  namespace: kube-system
  annotations:
    prometheus.io/port: "10055"
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: http-metrics-kube-dns
    port: 10055
    protocol: TCP
    targetPort: 10055
  selector:
    k8s-app: kube-dns
